// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`models should properly generate object type class for mongo prisma model with nested types: User 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";
import { UserAddress } from \\"../models/UserAddress\\";

@ObjectType(\\"User\\", {})
export class User {
  @Field(() => String, {
    nullable: false
  })
  id!: string;

  @Field(() => Int, {
    nullable: true
  })
  age?: number | null;

  @Field(() => UserAddress, {
    nullable: false
  })
  address!: UserAddress;
}
"
`;

exports[`models should properly generate object type class for mongo prisma model with nested types: UserAddress 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";

@ObjectType(\\"UserAddress\\", {})
export class UserAddress {
  @Field(() => String, {
    nullable: false
  })
  street!: string;

  @Field(() => Int, {
    nullable: true
  })
  number?: number | null;

  @Field(() => String, {
    nullable: false
  })
  city!: string;
}
"
`;

exports[`models should properly generate object type class for omitted prisma model: User 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";

export class User {
  @Field(() => Int, {
    nullable: false
  })
  intIdField!: number;

  @Field(() => String, {
    nullable: false
  })
  stringField!: string;

  @Field(() => String, {
    nullable: true
  })
  optionalStringField?: string | null;

  @Field(() => Int, {
    nullable: false
  })
  intField!: number;

  @Field(() => Float, {
    nullable: false
  })
  floatField!: number;

  @Field(() => Boolean, {
    nullable: false
  })
  booleanField!: boolean;

  @Field(() => Date, {
    nullable: false
  })
  dateField!: Date;

  @Field(() => GraphQLScalars.JSONResolver, {
    nullable: false
  })
  jsonField!: Prisma.JsonValue;
}
"
`;

exports[`models should properly generate object type class for prisma model when simpleResolvers option is enabled: User 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";

@ObjectType(\\"User\\", {
  simpleResolvers: true
})
export class User {
  @Field(() => Int, {
    nullable: false
  })
  id!: number;

  @Field(() => Date, {
    nullable: false
  })
  dateOfBirth!: Date;

  @Field(() => Float, {
    nullable: true
  })
  balance?: number | null;
}
"
`;

exports[`models should properly generate object type class for prisma model with descriptions: User 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";
import { Post } from \\"../models/Post\\";
import { UserCount } from \\"../resolvers/outputs/UserCount\\";

/**
 * User model doc
 */
@ObjectType(\\"User\\", {
  description: \\"User model doc\\"
})
export class User {
  @Field(() => Int, {
    nullable: false
  })
  id!: number;

  /**
   * field doc
   */
  @Field(() => String, {
    nullable: false,
    description: \\"field doc\\"
  })
  stringField!: string;

  @Field(() => Int, {
    nullable: false
  })
  intField!: number;

  /**
   * multiline doc 1
   * multiline doc 2
   */
  @Field(() => Boolean, {
    nullable: false,
    description: \\"multiline doc 1\\\\nmultiline doc 2\\"
  })
  boolField!: boolean;

  /**
   * relation doc
   */
  posts?: Post[];

  @Field(() => UserCount, {
    nullable: true
  })
  _count?: UserCount | null;
}
"
`;

exports[`models should properly generate object type class for prisma model with different scalar fields types: User 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";

@ObjectType(\\"User\\", {})
export class User {
  @Field(() => Int, {
    nullable: false
  })
  intIdField!: number;

  @Field(() => String, {
    nullable: false
  })
  stringField!: string;

  @Field(() => String, {
    nullable: true
  })
  optionalStringField?: string | null;

  @Field(() => Int, {
    nullable: false
  })
  intField!: number;

  @Field(() => Float, {
    nullable: false
  })
  floatField!: number;

  @Field(() => Boolean, {
    nullable: false
  })
  booleanField!: boolean;

  @Field(() => Date, {
    nullable: false
  })
  dateField!: Date;

  @Field(() => GraphQLScalars.JSONResolver, {
    nullable: false
  })
  jsonField!: Prisma.JsonValue;
}
"
`;

exports[`models should properly generate object type class for prisma model with enum and alias fields types: User 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";
import { Sample } from \\"../enums/Sample\\";

@ObjectType(\\"User\\", {})
export class User {
  @Field(() => Int, {
    nullable: false
  })
  intIdField!: number;

  @Field(() => Sample, {
    nullable: false
  })
  enumField!: \\"SAMPLE\\";
}
"
`;

exports[`models should properly generate object type class for prisma model with multiple attribute comments: User 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";

@ObjectType(\\"User\\", {})
export class User {
  @Field(() => Int, {
    nullable: false
  })
  id!: number;

  @Field(() => Date, {
    nullable: false
  })
  dateOfBirth!: Date;

  @Field(() => String, {
    nullable: false
  })
  name!: string;

  balance!: number | null;

  @Field(() => Float, {
    nullable: true
  })
  get accountBalance(): number | null {
    return this.balance ?? null;
  }
}
"
`;

exports[`models should properly generate object type class for prisma model with native types: NativeTypeModel 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";

@ObjectType(\\"NativeTypeModel\\", {})
export class NativeTypeModel {
  @Field(() => Int, {
    nullable: false
  })
  id!: number;

  @Field(() => GraphQLScalars.BigIntResolver, {
    nullable: true
  })
  bigInt?: bigint | null;

  @Field(() => GraphQLScalars.ByteResolver, {
    nullable: true
  })
  byteA?: Buffer | null;

  @Field(() => DecimalJSScalar, {
    nullable: true
  })
  decimal?: Prisma.Decimal | null;
}
"
`;

exports[`models should properly generate object type class for prisma model with omitted input field: User 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";

@ObjectType(\\"User\\", {})
export class User {
  @Field(() => Int, {
    nullable: false
  })
  id!: number;

  @Field(() => Date, {
    nullable: false
  })
  dateOfBirth!: Date;

  @Field(() => String, {
    nullable: false
  })
  name!: string;

  @Field(() => Float, {
    nullable: true
  })
  balance?: number | null;
}
"
`;

exports[`models should properly generate object type class for prisma model with renamed fields: User 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";
import { Post } from \\"../models/Post\\";
import { UserCount } from \\"../resolvers/outputs/UserCount\\";

@ObjectType(\\"User\\", {})
export class User {
  @Field(() => Int, {
    nullable: false
  })
  id!: number;

  @Field(() => Date, {
    nullable: false
  })
  dateOfBirth!: Date;

  /**
   * renamed field docs
   */
  name!: string;

  balance!: number | null;

  posts?: Post[];

  @Field(() => UserCount, {
    nullable: true
  })
  _count?: UserCount | null;

  /**
   * renamed field docs
   */
  @Field(() => String, {
    nullable: false,
    description: \\"renamed field docs\\"
  })
  get firstName(): string {
    return this.name;
  }

  @Field(() => Float, {
    nullable: true
  })
  get accountBalance(): number | null {
    return this.balance ?? null;
  }
}
"
`;

exports[`models should properly generate object type class for prisma model without omitted output field: User 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";

@ObjectType(\\"User\\", {})
export class User {
  @Field(() => Int, {
    nullable: false
  })
  id!: number;

  @Field(() => Date, {
    nullable: false
  })
  dateOfBirth!: Date;

  @Field(() => String, {
    nullable: false
  })
  name!: string;

  balance?: number | null;
}
"
`;

exports[`models should properly generate object type classes for prisma models with cyclic relations when models are renamed: Article 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";
import { Client } from \\"../models/Client\\";

@ObjectType(\\"Article\\", {})
export class Article {
  @Field(() => Int, {
    nullable: false
  })
  id!: number;

  author?: Client;

  @Field(() => Int, {
    nullable: false
  })
  authorId!: number;
}
"
`;

exports[`models should properly generate object type classes for prisma models with cyclic relations when models are renamed: Client 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";
import { Article } from \\"../models/Article\\";
import { ClientCount } from \\"../resolvers/outputs/ClientCount\\";

@ObjectType(\\"Client\\", {})
export class Client {
  @Field(() => Int, {
    nullable: false
  })
  id!: number;

  posts?: Article[];

  @Field(() => ClientCount, {
    nullable: true
  })
  _count?: ClientCount | null;
}
"
`;

exports[`models should properly generate object type classes for prisma models with cyclic relations: Post 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";
import { User } from \\"../models/User\\";

@ObjectType(\\"Post\\", {})
export class Post {
  @Field(() => Int, {
    nullable: false
  })
  id!: number;

  author?: User;

  @Field(() => Int, {
    nullable: false
  })
  authorId!: number;
}
"
`;

exports[`models should properly generate object type classes for prisma models with cyclic relations: User 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";
import { Post } from \\"../models/Post\\";
import { UserCount } from \\"../resolvers/outputs/UserCount\\";

@ObjectType(\\"User\\", {})
export class User {
  @Field(() => Int, {
    nullable: false
  })
  id!: number;

  posts?: Post[];

  @Field(() => UserCount, {
    nullable: true
  })
  _count?: UserCount | null;
}
"
`;

exports[`models should properly generate object type classes for prisma models with self relations: Service 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";
import { ServiceCount } from \\"../resolvers/outputs/ServiceCount\\";

@ObjectType(\\"Service\\", {})
export class Service {
  @Field(() => Int, {
    nullable: false
  })
  id!: number;

  @Field(() => String, {
    nullable: false
  })
  name!: string;

  sourceService?: Service | null;

  @Field(() => Int, {
    nullable: true
  })
  sourceId?: number | null;

  services?: Service[];

  @Field(() => ServiceCount, {
    nullable: true
  })
  _count?: ServiceCount | null;
}
"
`;

exports[`models when customPrismaImportPath is set to custom directory in node_modules should properly generate Prisma import path for model object type class: SampleModel 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../prisma-client\\";
import { DecimalJSScalar } from \\"../scalars\\";

@ObjectType(\\"SampleModel\\", {})
export class SampleModel {
  @Field(() => Int, {
    nullable: false
  })
  intIdField!: number;

  @Field(() => Int, {
    nullable: false
  })
  intField!: number;

  @Field(() => Float, {
    nullable: false
  })
  floatField!: number;
}
"
`;

exports[`models when customPrismaImportPath is set to custom repository directory should properly generate Prisma import path for model object type class: SampleModel 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../test/import\\";
import { DecimalJSScalar } from \\"../scalars\\";

@ObjectType(\\"SampleModel\\", {})
export class SampleModel {
  @Field(() => Int, {
    nullable: false
  })
  intIdField!: number;

  @Field(() => Int, {
    nullable: false
  })
  intField!: number;

  @Field(() => Float, {
    nullable: false
  })
  floatField!: number;
}
"
`;

exports[`models when emitIdAsIDType is set to true should properly generate model object type class: FirstModel 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";

@ObjectType(\\"FirstModel\\", {})
export class FirstModel {
  @Field(() => ID, {
    nullable: false
  })
  intIdField!: number;

  @Field(() => Int, {
    nullable: false
  })
  intField!: number;

  @Field(() => Float, {
    nullable: false
  })
  floatField!: number;
}
"
`;

exports[`models when emitIdAsIDType is set to true should properly generate model object type class: SecondModel 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";

@ObjectType(\\"SecondModel\\", {})
export class SecondModel {
  @Field(() => ID, {
    nullable: false
  })
  stringIdField!: string;

  @Field(() => String, {
    nullable: false
  })
  stringField!: string;

  @Field(() => Boolean, {
    nullable: false
  })
  booleanField!: boolean;
}
"
`;

exports[`models when emitIsAbstract is set to true should properly generate model object type class decorator options: SampleModel 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";

@ObjectType(\\"SampleModel\\", {
  isAbstract: true
})
export class SampleModel {
  @Field(() => Int, {
    nullable: false
  })
  intIdField!: number;

  @Field(() => Int, {
    nullable: false
  })
  intField!: number;

  @Field(() => Float, {
    nullable: false
  })
  floatField!: number;
}
"
`;
